--- a/index.html
+++ b/index.html
@@ -26,33 +26,33 @@
         Hi
         <span id="name"></span>
       </h1>
-      <p class="two" id="greetingText">I really like your name btw!</p>
+      <p class="two" id="greetingText">hei bgst, its me vx.</p>
     </div>
 
     <div class="three">
-      <p>It's your birthday!! :D</p>
+      <p>selamat ulang tahunn</p>
     </div>
 
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-          Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
+          selamat ulang tahun nanabgst yang ke 19, ga kerasa udah kenal ± 4 tahun, yang dulu bocil sekarang juga masih bocil. semoga yang kamu harapkan tercapai *emotbatu*, JANGAN HALU TERUS, JANGAN TERLALU BAIK SAMA ORANG, JANGAN CENGENG, JANGAN CEROBOH, JANGAN PERNAH LUPAIN GUA KALO UDAH SUKSES!  itupun kalau sukses :v
         </p>
-        <p class="fake-btn">Send</p>
+        <p class="fake-btn">OK</p>
       </div>
     </div>
 
     <div class="five">
-      <p class="idea-1">That's what I was going to do.</p>
-      <p class="idea-2">But then I stopped.</p>
+      <p class="idea-1">so whenever you ask me again how i feel,</p>
+      <p class="idea-2">please remember</p>
       <p class="idea-3">
-        I realised, I wanted to do something<br>
-        <strong>special</strong>
+        my answer is<br>
+        <strong>YOU</strong>
         .
       </p>
       <p class="idea-4">Because,</p>
       <p class="idea-5">
-        You are Special
+        You are adickq
         <span>:)</span>
       </p>
       <p class="idea-6">
@@ -65,8 +65,8 @@
       <img src="./img/irene.jpg" alt="profile" class="profile-picture" id="imagePath"/>
       <img src="img/hat.svg" alt="hat" class="hat" />
       <div class="wish">
-        <h3 class="wish-hbd">Happy Birthday!</h3>
-        <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+        <h3 class="wish-hbd">HBD JING!</h3>
+        <h5 id="wishText">semoga harimu senin terus, jago coding dan ranjang</h5>
       </div>
     </div>
 
@@ -139,8 +139,8 @@
     </div>
 
     <div class="nine">
-      <p>Okay, now come back and tell me if you liked it.</p>
-      <p id="replay">Or click, if you want to watch it again.</p>
+      <p>Okay, kasih tau gua kalo lu suka.</p>
+      <p id="replay">Or click, kalo lu mau rewatch.</p>
       <p class="last-smile">:)</p>
     </div>
   </div>
