--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Happy Birthday!!! :)</title>
+  <title>ulang tahun.</title>
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet" />
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
@@ -36,7 +36,7 @@
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-          selamat ulang tahun nanabgst yang ke 19, ga kerasa udah kenal ± 4 tahun, yang dulu bocil sekarang juga masih bocil. semoga yang kamu harapkan tercapai *emotbatu*, JANGAN HALU TERUS, JANGAN TERLALU BAIK SAMA ORANG, JANGAN CENGENG, JANGAN CEROBOH, JANGAN PERNAH LUPAIN GUA KALO UDAH SUKSES!  itupun kalau sukses :v
+          ga kerasa udah kenal ± 4 tahun, yang dulu bocil sekarang juga masih bocil. semoga yang kamu harapkan tercapai *emotbatu*, JANGAN HALU TERUS, JANGAN TERLALU BAIK SAMA ORANG, JANGAN CENGENG, JANGAN PERNAH LUPAIN GUA KALO UDAH SUKSES!  itupun kalau sukses :v
         </p>
         <p class="fake-btn">OK</p>
       </div>
