--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
   <div class="container">
     <div class="one">
       <h1 class="one">
-        Hi
+        hi
         <span id="name"></span>
       </h1>
-      <p class="two" id="greetingText">hei bgst, its me vx.</p>
+      <p class="two" id="greetingText">HBD JING!</p>
     </div>
 
     <div class="three">
-      <p>selamat ulang tahunn</p>
+      <p>selamat ulang tahun.</p>
     </div>
 
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-          ga kerasa udah kenal ± 4 tahun, yang dulu bocil sekarang juga masih bocil. semoga yang kamu harapkan tercapai *emotbatu*, JANGAN HALU TERUS, JANGAN TERLALU BAIK SAMA ORANG, JANGAN CENGENG, JANGAN PERNAH LUPAIN GUA KALO UDAH SUKSES!  itupun kalau sukses :v
+          19 tahun? ga kerasa udah kenal ± 4 tahun, yang dulu bocah sekarang juga masih bocil. semoga yang kamu harapkan tercapai *emotbatu*, JANGAN HALU TERUS, JANGAN TERLALU BAIK SAMA ORANG, JANGAN CENGENG, JANGAN PERNAH LUPAIN GUA KALO UDAH SUKSES!  itupun kalau sukses :v
         </p>
         <p class="fake-btn">OK</p>
       </div>
@@ -65,7 +65,7 @@
       <img src="./img/irene.jpg" alt="profile" class="profile-picture" id="imagePath"/>
       <img src="img/hat.svg" alt="hat" class="hat" />
       <div class="wish">
-        <h3 class="wish-hbd">HBD JING!</h3>
+        <h3 class="wish-hbd">nanabgst</h3>
         <h5 id="wishText">semoga harimu senin terus, jago coding dan ranjang</h5>
       </div>
     </div>
