--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         hi
         <span id="name"></span>
       </h1>
-      <p class="two" id="greetingText">HBD JING!</p>
+      <p class="two" id="greetingText">HBD anime kidzz!</p>
     </div>
 
     <div class="three">
@@ -36,7 +36,7 @@
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-          19 tahun? ga kerasa udah kenal ± 4 tahun, yang dulu bocah sekarang juga masih bocil. semoga yang kamu harapkan tercapai *emotbatu*, JANGAN HALU TERUS, JANGAN TERLALU BAIK SAMA ORANG, JANGAN CENGENG, JANGAN PERNAH LUPAIN GUA KALO UDAH SUKSES!  itupun kalau sukses :v
+          Otanjoubi omedetou gozaimasu saudara Yor chan!😍❤️ Subarashii ichinen ni narimasu you ni. honda kawasaki suzuki sizuka daihatsu aishiteru bakayaro. semoga dilancarkan untuk masuk STAN, u deserve it. wish u all the best.
         </p>
         <p class="fake-btn">OK</p>
       </div>
@@ -65,8 +65,8 @@
       <img src="./img/irene.jpg" alt="profile" class="profile-picture" id="imagePath"/>
       <img src="img/hat.svg" alt="hat" class="hat" />
       <div class="wish">
-        <h3 class="wish-hbd">nanabgst</h3>
-        <h5 id="wishText">semoga harimu senin terus, jago coding dan ranjang</h5>
+        <h3 class="wish-hbd">ale - ale</h3>
+        <h5 id="wishText">semoga harimu senin terus, jago analisis dan op3n m1nd3d</h5>
       </div>
     </div>
 
