--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
     </div>
 
     <div class="five">
-      <p class="idea-1">so whenever you ask me again how i feel,</p>
-      <p class="idea-2">please remember</p>
+      <p class="idea-1">Zutto</p>
+      <p class="idea-2">zutto</p>
       <p class="idea-3">
-        my answer is<br>
-        <strong>YOU</strong>
+        sobani<br>
+        <strong>iru yo</strong>
         .
       </p>
-      <p class="idea-4">Because,</p>
+      <p class="idea-4">because,</p>
       <p class="idea-5">
-        You are adickq
+        u are adickq
         <span>:)</span>
       </p>
       <p class="idea-6">
@@ -139,8 +139,8 @@
     </div>
 
     <div class="nine">
-      <p>Okay, kasih tau gua kalo lu suka.</p>
-      <p id="replay">Or click, kalo lu mau rewatch.</p>
+      <p>okee, tell me if u like.</p>
+      <p id="replay">klik ini kalo mau rewatch.</p>
       <p class="last-smile">:)</p>
     </div>
   </div>
